Added full duration and added Date fix (again)

--- a/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
+++ b/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
@@ -133,6 +133,12 @@
             </ItemsControl>
 
         </GroupBox>
+        
+        <TextBlock Grid.Column="1"
+                   Grid.Row="2"
+                   Margin="10"
+                   Text="{Binding RequestsLength}"
+                   HorizontalAlignment="Right"/>
 
         <GroupBox Grid.Column="1"
                   Grid.Row="2"
