--- a/Audiosurf2_Tools/MiniControls/RequestItemControl.axaml
+++ b/Audiosurf2_Tools/MiniControls/RequestItemControl.axaml
@@ -10,7 +10,7 @@
         <models:TwitchRequestItem/>    
     </UserControl.DataContext>
     
-    <Grid ColumnDefinitions="*,Auto,150"
+    <Grid ColumnDefinitions="*,Auto,75,75"
           RowDefinitions="Auto,Auto,Auto"
           Margin="10">
         <TextBlock Grid.Column="0"
@@ -53,15 +53,23 @@
         </Button>
         
         <Button Grid.Column="2"
+                Grid.ColumnSpan="2"
                 Grid.Row="0"
-                VerticalAlignment="Stretch"
-                VerticalContentAlignment="Center"
-                HorizontalAlignment="Stretch"
-                HorizontalContentAlignment="Center"
                 Margin="2.5"
-                Background="#222266"
-                Content="Open in Browser"
-                Command="{Binding OpenLocation}"/>
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                Background="#224422"
+                Command="{Binding RemoveAndCount}">
+            <StackPanel Orientation="Horizontal"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center"
+                        Spacing="5">
+                <TextBlock Text="Played"
+                           VerticalAlignment="Center"/>
+                <Image Source="avares://Audiosurf2_Tools/Assets/checkmark.png"
+                       MaxHeight="20"/>
+            </StackPanel>
+        </Button>
         
         <Button Grid.Column="2"
                 Grid.Row="1"
@@ -70,11 +78,24 @@
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
                 Margin="2.5"
+                Background="#222266"
+                Content="Open"
+                Command="{Binding OpenLocation}"/>
+        
+        <Button Grid.Column="3"
+                Grid.Row="1"
+                VerticalAlignment="Stretch"
+                VerticalContentAlignment="Center"
+                HorizontalAlignment="Stretch"
+                HorizontalContentAlignment="Center"
+                Margin="2.5"
                 Background="#662222"
-                Content="Remove"
-                Command="{Binding Remove}"/>
+                Command="{Binding Remove}">
+            <Image MaxHeight="20" Source="avares://Audiosurf2_Tools/Assets/delete.png"/>
+        </Button>
                     
         <TextBlock Grid.Column="2"
+                   Grid.ColumnSpan="2"
                    Grid.Row="2"
                    VerticalAlignment="Center"
                    Margin="2.5"
