--- a/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
+++ b/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
@@ -174,6 +174,7 @@
                      HorizontalAlignment="Stretch"
                      VerticalAlignment="Stretch"
                      CornerRadius="3"
+                     SelectedIndex="{Binding RequestSelectionDummy}"
                      DoubleTapped="InputElement_OnDoubleTapped"
                      Items="{Binding Requests}">
                 <ListBox.ItemTemplate>
